objects/Forecast_Fact_Object__c.object
<CustomObject>
    <fields>
        <fullName>Advanced_Account_Forecast_Set_Use__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Advanced Account Forecast Set Use</label>
        <referenceTo>AdvAcctForecastSetUse</referenceTo>
        <relationshipLabel>Forecast Fact Object</relationshipLabel>
        <relationshipName>Forecast_Fact_Object</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Forecast_Set_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Forecast Set Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matching_Rec_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Matching Rec Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Forecast Fact Object</relationshipLabel>
        <relationshipName>Forecast_Fact_Object</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Use_Unique_Identifier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Use Unique Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Forecast Fact Object</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RelatedAccount__c</columns>
        <columns>Advanced_Account_Forecast_Set_Use__c</columns>
        <columns>Use_Unique_Identifier__c</columns>
        <columns>Forecast_Set_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Forecast Fact Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast Fact Object</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>